WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52690
[jsfunfuzz] Assertion asking activation for arguments when arguments is overridden
https://bugs.webkit.org/show_bug.cgi?id=52690
Summary
[jsfunfuzz] Assertion asking activation for arguments when arguments is overr...
Oliver Hunt
Reported
2011-01-18 17:30:16 PST
tryItOut("(arguments) = NaN;with({}) { (arguments); } ");
Attachments
Patch
(6.60 KB, patch)
2011-01-18 18:30 PST
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-01-18 18:30:24 PST
Created
attachment 79376
[details]
Patch
Oliver Hunt
Comment 2
2011-01-18 18:38:20 PST
Committed
r76090
: <
http://trac.webkit.org/changeset/76090
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug