2011-01-18  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        [jsfunfuzz] Assertion asking activation for arguments when arguments is overridden
        https://bugs.webkit.org/show_bug.cgi?id=52690

        Add a few more tests.

        * fast/js/function-dot-arguments-expected.txt:
        * fast/js/script-tests/function-dot-arguments.js:
        (overwroteArgumentsInDynamicScope1):
        (overwroteArgumentsInDynamicScope2):
        (overwroteArgumentsInDynamicScope3):
2011-01-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        [jsfunfuzz] Assertion asking activation for arguments when arguments is overridden
        https://bugs.webkit.org/show_bug.cgi?id=52690

        Clean up code to retrieve arguments from activation and function objects.
        Remove the incorrect assertion from JSActivation's argumentsGetter.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::retrieveArguments):
        * runtime/JSActivation.cpp:
        (JSC::JSActivation::argumentsGetter):

Canonical link: https://commits.webkit.org/66328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76090 268f45cc-cd09-0410-ab3c-d52691b4dbfc